// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SteppedLine renderHorizontal should work well 1`] = `
<SteppedLine
  className=""
  orientation="horizonal"
  style={Object {}}
  x0={1}
  x1={0}
  y0={1}
  y1={0}
>
  <div
    className="stepped-line"
  >
    <Line
      className=""
      orientation="horizonal"
      style={Object {}}
      x0={1}
      x1={0.5}
      y0={1}
      y1={1}
    >
      <div
        className="line-placeholder"
      >
        <div
          className="line-placeholder-item"
          orientation="horizonal"
          style={
            Object {
              "borderTopColor": "#ddd",
              "borderTopStyle": "solid",
              "borderTopWidth": 1,
              "left": "1px",
              "position": "absolute",
              "top": "1px",
              "transform": "rotate(180deg)",
              "transformOrigin": "0 0",
              "width": "0.5px",
              "zIndex": "1",
            }
          }
        />
      </div>
    </Line>
    <Line
      className=""
      orientation="horizonal"
      style={Object {}}
      x0={0}
      x1={0.5}
      y0={0}
      y1={0}
    >
      <div
        className="line-placeholder"
      >
        <div
          className="line-placeholder-item"
          orientation="horizonal"
          style={
            Object {
              "borderTopColor": "#ddd",
              "borderTopStyle": "solid",
              "borderTopWidth": 1,
              "left": "0px",
              "position": "absolute",
              "top": "0px",
              "transform": "rotate(0deg)",
              "transformOrigin": "0 0",
              "width": "0.5px",
              "zIndex": "1",
            }
          }
        />
      </div>
    </Line>
    <Line
      className=""
      orientation="horizonal"
      style={Object {}}
      x0={0.5}
      x1={0.5}
      y0={-1}
      y1={1}
    >
      <div
        className="line-placeholder"
      >
        <div
          className="line-placeholder-item"
          orientation="horizonal"
          style={
            Object {
              "borderTopColor": "#ddd",
              "borderTopStyle": "solid",
              "borderTopWidth": 1,
              "left": "0.5px",
              "position": "absolute",
              "top": "-1px",
              "transform": "rotate(90deg)",
              "transformOrigin": "0 0",
              "width": "2px",
              "zIndex": "1",
            }
          }
        />
      </div>
    </Line>
  </div>
</SteppedLine>
`;

exports[`SteppedLine renderVertical should work well 1`] = `
<SteppedLine
  className=""
  orientation="vertical"
  style={Object {}}
  x0={1}
  x1={0}
  y0={1}
  y1={0}
>
  <div
    className="stepped-lineto"
  >
    <Line
      className=""
      orientation="vertical"
      style={Object {}}
      x0={1}
      x1={1}
      y0={1}
      y1={0.5}
    >
      <div
        className="line-placeholder"
      >
        <div
          className="line-placeholder-item"
          orientation="vertical"
          style={
            Object {
              "borderTopColor": "#ddd",
              "borderTopStyle": "solid",
              "borderTopWidth": 1,
              "left": "1px",
              "position": "absolute",
              "top": "1px",
              "transform": "rotate(-90deg)",
              "transformOrigin": "0 0",
              "width": "0.5px",
              "zIndex": "1",
            }
          }
        />
      </div>
    </Line>
    <Line
      className=""
      orientation="vertical"
      style={Object {}}
      x0={0}
      x1={0}
      y0={0}
      y1={0.5}
    >
      <div
        className="line-placeholder"
      >
        <div
          className="line-placeholder-item"
          orientation="vertical"
          style={
            Object {
              "borderTopColor": "#ddd",
              "borderTopStyle": "solid",
              "borderTopWidth": 1,
              "left": "0px",
              "position": "absolute",
              "top": "0px",
              "transform": "rotate(90deg)",
              "transformOrigin": "0 0",
              "width": "0.5px",
              "zIndex": "1",
            }
          }
        />
      </div>
    </Line>
    <Line
      className=""
      orientation="vertical"
      style={Object {}}
      x0={0}
      x1={1}
      y0={0.5}
      y1={0.5}
    >
      <div
        className="line-placeholder"
      >
        <div
          className="line-placeholder-item"
          orientation="vertical"
          style={
            Object {
              "borderTopColor": "#ddd",
              "borderTopStyle": "solid",
              "borderTopWidth": 1,
              "left": "0px",
              "position": "absolute",
              "top": "0.5px",
              "transform": "rotate(0deg)",
              "transformOrigin": "0 0",
              "width": "1px",
              "zIndex": "1",
            }
          }
        />
      </div>
    </Line>
  </div>
</SteppedLine>
`;
